--- a/iOS_Swift_CRUD/SQLiteCRUD/SQLiteCRUD/Base.lproj/Main.storyboard
+++ b/iOS_Swift_CRUD/SQLiteCRUD/SQLiteCRUD/Base.lproj/Main.storyboard
@@ -16,23 +16,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="daelimlogo" translatesAutoresizingMaskIntoConstraints="NO" id="km4-1v-o2Q">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ss-G8-yK0">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                            </imageView>
+                                <state key="normal" image="daelimlogo"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="km4-1v-o2Q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5gl-rK-VeY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="km4-1v-o2Q" secondAttribute="bottom" id="8GI-fp-aR5"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="km4-1v-o2Q" secondAttribute="trailing" id="L01-HG-s8u"/>
-                            <constraint firstItem="km4-1v-o2Q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="o92-Gh-K2e"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1ss-G8-yK0" secondAttribute="bottom" id="BWQ-qt-0qe"/>
+                            <constraint firstItem="1ss-G8-yK0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="IjO-PQ-woc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1ss-G8-yK0" secondAttribute="trailing" id="pnB-f8-BSN"/>
+                            <constraint firstItem="1ss-G8-yK0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rLF-hc-ujZ"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="70"/>
+            <point key="canvasLocation" x="18.840579710144929" y="69.642857142857139"/>
         </scene>
     </scenes>
     <resources>
