--- a/iOS_Swift_CRUD/SQLiteCRUD/SQLiteCRUD/Base.lproj/Main.storyboard
+++ b/iOS_Swift_CRUD/SQLiteCRUD/SQLiteCRUD/Base.lproj/Main.storyboard
@@ -19,6 +19,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ss-G8-yK0">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <state key="normal" image="daelimlogo"/>
+                                <connections>
+                                    <segue destination="7Ny-JE-VHv" kind="show" id="ahU-ph-BQG"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -40,11 +43,11 @@
             <objects>
                 <viewController id="7Ny-JE-VHv" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wvO-an-R36">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eworld" translatesAutoresizingMaskIntoConstraints="NO" id="JAr-eu-GXf">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gmJ-PN-PzA"/>
