--- a/iOS_Swift_CRUD/SQLiteCRUD/SQLiteCRUD/Base.lproj/Main.storyboard
+++ b/iOS_Swift_CRUD/SQLiteCRUD/SQLiteCRUD/Base.lproj/Main.storyboard
@@ -16,11 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ss-G8-yK0">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ss-G8-yK0">
+                                <rect key="frame" x="0.0" y="45" width="414" height="818"/>
                                 <state key="normal" image="daelimlogo"/>
                                 <connections>
-                                    <segue destination="7Ny-JE-VHv" kind="show" id="ahU-ph-BQG"/>
+                                    <action selector="onClickButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="coA-4R-n7g"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -38,16 +38,16 @@
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="69.642857142857139"/>
         </scene>
-        <!--View Controller-->
+        <!--View ControllerACRO-->
         <scene sceneID="9sY-bc-n9U">
             <objects>
-                <viewController id="7Ny-JE-VHv" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="acroxib" useStoryboardIdentifierAsRestorationIdentifier="YES" id="7Ny-JE-VHv" customClass="ViewControllerACRO" customModule="SQLiteCRUD" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wvO-an-R36">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eworld" translatesAutoresizingMaskIntoConstraints="NO" id="JAr-eu-GXf">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gmJ-PN-PzA"/>
