--- a/iOS/014/ARKitNavigationDemo/ARKitNavigationDemo/Storyboards/Base.lproj/Navigation.storyboard
+++ b/iOS/014/ARKitNavigationDemo/ARKitNavigationDemo/Storyboards/Base.lproj/Navigation.storyboard
@@ -11,7 +11,7 @@
         <!--UpperAR View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController storyboardIdentifier="                                                                                                                     " useStoryboardIdentifierAsRestorationIdentifier="YES" id="BV1-FR-VrT" customClass="UpperARViewController" customModule="ARKitNavigationDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UpperARViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BV1-FR-VrT" customClass="UpperARViewController" customModule="ARKitNavigationDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ma0-Fz-KrA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
