Change the design

--- a/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
@@ -5,7 +5,25 @@
     <title>게시물 작성폼</title>
 </head>
 
+<style>
+    .layout{
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 40px;
+    }
 
+    .layout > input {
+        width : 100%;
+        box-sizing : border-box
+
+    }
+    .layout > textarea {
+        width:100%;
+        margin-top:10px;
+        min-height:300px;
+    }
+
+</style>
 
 <body>
     <div class="layout">
