--- a/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="layout">
-        <form action="/board/writedo" method="post">
+        <form action="/board/writepro" method="post">
         <input name="title" type="text">
         <textarea name="content"></textarea>
         <button type="submit">작성</button>
