1.findById(id).get()코드를 통해서 아이디를 하나씩 가져오게 하고 controller에 추가함 2.board/list에 Html에다가 누르면 각자 페이지에 이동하게끔 배움

--- a/WEB/homework/bbs/src/main/resources/templates/boardList.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardList.html
@@ -26,7 +26,9 @@
 <!--            each는 반복문이다 그래서 DB에 가지고있는 n개를 모두 호출해준다.-->
             <tr th:each="board : ${list}">
                 <td th:text="${board.id}">1</td>
-                <td th:text="${board.title}">제목입니다.</td>
+                <td>
+                    <a th:text="${board.title}" th:href="@{/board/view(id=${board.id})}"></a>
+                </td>
             </tr>
             </tbody>
         </table>
