--- a/WEB/homework/bbs/src/main/resources/templates/boardview.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardview.html
@@ -7,7 +7,7 @@
 <body>
 <h1 th:text="${board.title}">제목입니다.</h1>
 <p th:text="${board.content}">내용이 들어갈 부분입니다.</p>
-<a href="#">글삭제</a>
+<a th:href="@{/board/delete(id=${board.id})}">글삭제</a>
 
 </body>
 </html>
