--- a/WEB/homework/bbs/src/main/resources/templates/boardview.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardview.html
@@ -8,6 +8,8 @@
 <h1 th:text="${board.title}">제목입니다.</h1>
 <p th:text="${board.content}">내용이 들어갈 부분입니다.</p>
 <a th:href="@{/board/delete(id=${board.id})}">글삭제</a>
+<a th:href="@{/board/modify/{id}(id=${board.id})}">글수정</a>
+
 
 </body>
 </html>
