--- a/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
@@ -27,10 +27,9 @@
 
 <body>
     <div class="layout">
-        <form action="/board/writepro" method="post" enctype="multipart/form-data">
+        <form action="/board/writepro" method="post" >
         <input name="title" type="text">
         <textarea name="content"></textarea>
-        <input type="file" name="file">
         <button type="submit">작성</button>
         </form>
     </div>
