페이지 넘겨지는거 수정

--- a/WEB/homework/bbs/src/main/resources/templates/boardList.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardList.html
@@ -34,7 +34,7 @@
             </tbody>
         </table>
         <th:block th:each="page : ${#numbers.sequence(startPage, endPage)}">
-            <a th:if="${page != nowPage}" th:href="@{/board/list(page = ${page - 1})}" th:text="${page}"></a>
+            <a th:if="${page != nowPage}" th:href="@{/board/list(page = ${page - 1}, searchKeyword = ${param.searchKeyword})}" th:text="${page}"></a>
             <strong th:if="${page == nowPage}" th:text="${page}" style="color : red"></strong>
         </th:block>
     </div>
