검색창 디자인 추가

--- a/WEB/homework/bbs/src/main/resources/templates/boardList.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardList.html
@@ -37,6 +37,10 @@
             <a th:if="${page != nowPage}" th:href="@{/board/list(page = ${page - 1}, searchKeyword = ${param.searchKeyword})}" th:text="${page}"></a>
             <strong th:if="${page == nowPage}" th:text="${page}" style="color : red"></strong>
         </th:block>
+        <form th:action="@{/board/list}" method="get">
+            <input type="text" name="searchKeyword">
+            <button type="submit">검색</button>
+        </form>
     </div>
 <!--시작 번호에서 끝번호까지 반복-->
 </body>
