--- a/WEB/homework/bbs/src/main/resources/templates/boardList.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardList.html
@@ -14,10 +14,11 @@
 </style>
 
 <body>
-    <div class="layout">
-        <table>
-            <thead>
-            <tr>
+    <div class="layout" style="text-align:center;">
+        <h1 >SODOC 게시판</h1>
+        <table style="width:500px; margin-left:80px;">
+            <thead style="text-align:center;">
+            <tr >
                 <th>글번호</th>
                 <th>글제목</th>
             </tr>
