--- a/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardwrite.html
@@ -26,6 +26,7 @@
 </style>
 
 <body>
+<h1 style="text-align:center; height:10px;">글작성</h1>
     <div class="layout">
         <form action="/board/writepro" method="post" >
         <input name="title" type="text">
