--- a/WEB/homework/bbs/src/main/resources/templates/boardview.html
+++ b/WEB/homework/bbs/src/main/resources/templates/boardview.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http//www.thymeleaf.org">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <head>
     <meta charset="UTF-8">
     <title>게시물 상세 페이지</title>
@@ -7,7 +8,9 @@
 <body>
 <h1 th:text="${board.title}">제목입니다.</h1>
 <p th:text="${board.content}">내용이 들어갈 부분입니다.</p>
-<a th:href="@{/board/delete(id=${board.id})}">글삭제</a>
+<button type="button" class="btn btn-dark">
+    <a th:href="@{/board/delete(id=${board.id})}">글삭제</a>
+</button>
 <a th:href="@{/board/modify/{id}(id=${board.id})}">글수정</a>
 
 <!--//http://localhost:8070/board/write-->
